code/tui/src/app/snapshots/app__chat_view__tests__accounting_bottom_statusline_inline.snap
---
source: code/tui/src/app/chat_view_tests.rs
expression: text(&buffer)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
> keep this draft                                                               
────────────────────────────────────────────────────────────────────────────────
  cache hit 75.0% · cost $0.01008                                               
  ⏸ Manual
