code/tui/src/app/snapshots/app__chat_view__tests__configured_statusline_fullscreen.snap
---
source: code/tui/src/app/chat_view_tests.rs
expression: text(&before)
---
   branch-layout /work/ash                                                    [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ────────────────────────────────────────────────────────────────────────────────────────────────  
  > keep this draft                                                                                 
  ──────────────────────────────────────────────────────────────────── Shared model (high) · Plan   
  ⏸ Manual                                                                                          
                                                Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
