code/tui/src/app/snapshots/app__chat_view__tests__configured_statusline_inline.snap
---
source: code/tui/src/app/chat_view_tests.rs
expression: text(&before)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
────────────────────────────────────────────────────────────────────────────────────────────────────
> keep this draft                                                                                   
────────────────────────────────────────────────────────────────────────────────────────────────────
  Shared model (high) · branch-layout · context unknown · Plan                                      
  ⏸ Manual
